--- a/StockG/static/content/site.css
+++ b/StockG/static/content/site.css
@@ -1,7 +1,7 @@
 body {
     /*padding-top: 50px;*/
     padding-bottom: 20px;
-    background-color: #262658;
+    background-color: #37517e;
     color: white;
 }
 html {
