intro profile image + fixing

--- a/StockG/templates/intro.html
+++ b/StockG/templates/intro.html
@@ -369,10 +369,11 @@
               <h3>Начальный план</h3>
               <h4><sup>$</sup>20<span>в месяц</span></h4>
               <ul>
-                <li><i class="bx bx-check"></i> Предсказывания развития цен ограниченного количества компаний </li>
-                <li><i class="bx bx-check"></i> 2 сигнала рекомендации в месяц </li>
-                <li class="na"><i class="bx bx-x"></i> <span> Расширенные настройки </span></li>
-                <li class="na"><i class="bx bx-x"></i> <span> Использование трейдера </span></li>
+                  <li><i class="bx bx-check"></i> Предсказывания развития цен ограниченного количества компаний </li>
+                  <li><i class="bx bx-check"></i> 2 сигнала рекомендации в месяц </li>
+                  <li class="na"><i class="bx bx-x"></i> <span> Расширенные настройки </span></li>
+                  <li class="na"><i class="bx bx-x"></i> <span> Использование трейдера </span></li>
+                  <li class="na"><i class="bx bx-x"></i> <span> Ранок криптовалют </span></li>
               </ul>
               <a href="#" class="buy-btn">Начать</a>
             </div>
@@ -380,14 +381,15 @@
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="200">
             <div class="box featured">
-              <h3>План золотая середина</h3>
+              <h3>Стандартный план</h3>
               <h4><sup>$</sup>50<span>в месяц</span></h4>
               <ul>
-                <li><i class="bx bx-check"></i> Предсказывания развития цен 10 любых компаний и индексов </li>
-                <li><i class="bx bx-check"></i> До 20 сигналов рекомендации в месяц с расширенными модификациями </li>
-                <li><i class="bx bx-check"></i> Дополнительные способы отображения </li>
-                <li><i class="bx bx-check"></i> Расширенные настройки </li>
-                <li><i class="bx bx-check"></i> Использование трейдера </li>
+                  <li><i class="bx bx-check"></i> Предсказывания развития цен 10 любых компаний и индексов </li>
+                  <li><i class="bx bx-check"></i> До 20 сигналов рекомендации в месяц с расширенными модификациями </li>
+                  <li><i class="bx bx-check"></i> Дополнительные способы отображения </li>
+                  <li><i class="bx bx-check"></i> Расширенные настройки </li>
+                  <li><i class="bx bx-check"></i> Использование трейдера </li>
+                  <li class="na"><i class="bx bx-x"></i> <span> Ранок криптовалют </span></li>
               </ul>
               <a href="#" class="buy-btn">Начать</a>
             </div>
@@ -395,7 +397,7 @@
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="box">
-              <h3>Developer Plan</h3>
+              <h3>Професиональный план</h3>
               <h4><sup>$</sup>100<span>в месяц</span></h4>
               <ul>
                   <li><i class="bx bx-check"></i> Предсказывания развития цен не ограниченного количества компаний, индексов и криптовалют</li>
@@ -419,7 +421,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Частве вопросы</h2>
+          <h2>Частые вопросы</h2>
           <p>Если вы не нашли ответа на ваш вопрос тут, наша служба поддерки вам всегда с удовольствием придёт на помошь</p>
         </div>
 
