--- a/StockG/templates/intro.html
+++ b/StockG/templates/intro.html
@@ -304,12 +304,12 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic"><img src="/static/intro_assets/img/team/ivan-a.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Иван Аникин</h4>
-                <span>Product Manager</span>
-                <p>Passionate about IT, technologies, art, reading and traveling</p>
-                <div class="social">
-                  <a href="https://supercoolserver.azurewebsites.net/api/Default/About_Me"><i class="ri-window-fill"></i></a>
-                </div>
+                  <h4>Иван Аникин</h4>
+                  <span>Product Manager</span>
+                  <p>Вдохновлён IT, технологиями, наукой, искусством, музыкой, чтением и путешествование</p> <!--Passionate about IT, technologies, art, reading and traveling-->
+                  <div class="social">
+                      <a href="https://supercoolserver.azurewebsites.net/api/Default/About_Me"><i class="ri-window-fill"></i></a>
+                  </div>
               </div>
             </div>
           </div>
@@ -318,8 +318,8 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="/static/intro_assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Алеся</h4>
+                <span>Product Owner</span>
                 <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
@@ -335,8 +335,8 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic"><img src="/static/intro_assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Иван</h4>
+                <span>Product Manager</span>
                 <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
